# rusty_chess

./: .gitignore  Cargo.toml  LICENSE  README.md
backend/: Cargo.toml
backend/src/: config.rs  lib.rs  main.rs
backend/src/board_setup/: models.rs
backend/src/chess_bot/: bitmasks.rs  evaluation.rs  mod.rs  pawn_structure.rs  piece_tables.rs  space_eval.rs  zobrist.rs
backend/src/move_generator/: mod.rs  models.rs  restrictions.rs  utils.rs
backend/src/move_register/: mod.rs  models.rs
backend/src/opening_book/: mod.rs  move_parser.rs
backend/tests/: moves.rs
gui/: Cargo.toml
gui/src/: additions.rs  lib.rs  main.rs  models.rs
rusty_chess_ui/: package.json  pnpm-lock.yaml  tailwind.config.js
rusty_chess_ui/src-tauri/: Cargo.toml  settings.toml  tauri.conf.json
rusty_chess_ui/src-tauri/resources/: opening_book.txt  settings.toml
rusty_chess_ui/src-tauri/src/: lib.rs  main.rs
rusty_chess_ui/src/components/: Square.svelte
rusty_chess_ui/src/lib/: interfaces.ts  shared.svelte.ts
rusty_chess_ui/src/routes/: +page.svelte
