[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-recursion = "1.0.4"
config = "0.13.3"
dyn-clone = "1.0.10"
easybench = "1.1.0"
itertools = "0.10.5"
rand = "0.8.5"
regex = "1.7.3"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.39"
tokio = { version = "1.27.0", features = ["macros", "rt", "rt-multi-thread"] }
